build: use MRJAR